--- a/composer.json
+++ b/composer.json
@@ -14,27 +14,37 @@
 		}
 	],
 	"support": {
-        "email": "info@vrisini.com"
+        "issues": "https://github.com/vrisiniinfotech/vi-registration/issues",
+        "source": "https://github.com/vrisiniinfotech/vi-registration",
+        "forum": "https://community.contao.org"
     },
-	"require":{
-		"php":">=5.6",
-		"contao/core-bundle":"^4.3"
-	},
-	"autoload":{
-		"psr-4": {
-			"Vrisini\\ViRegistration\\": "src/"
-		},
-		"classmap": [
-		    "src/Resources/contao/"
-		],
-		"exclude-from-classmap": [
-		    "src/Resources/contao/config/",
-		    "src/Resources/contao/dca/",
-		    "src/Resources/contao/languages/",
-		    "src/Resources/contao/templates/"
-		]
-	},
-	"extra": {
-		"contao-manager-plugin": "Vrisini\\ViRegistration\\ContaoManager\\Plugin"
-	}
+    "require": {
+        "php": "^7.1",
+        "contao/core-bundle": "^4.5",
+        "doctrine/dbal": "^2.7",
+        "psr/log": "^1.0",
+        "symfony/config": "^3.3 || ^4.0",
+        "symfony/dependency-injection": "^3.3 || ^4.0",
+        "symfony/event-dispatcher": "^3.3 || ^4.0",
+        "symfony/http-foundation": "^3.3 || ^4.0",
+        "symfony/http-kernel": "^3.3 || ^4.0",
+        "symfony/security-core": "^3.3 || ^4.0",
+        "symfony/security-http": "^3.3 || ^4.0"
+    },
+    "require-dev": {
+        "contao/manager-plugin": "~2.0",
+        "friendsofphp/php-cs-fixer": "^2.12",
+        "php-http/guzzle6-adapter": "^1.1"
+    },
+    "conflict": {
+        "contao/manager-plugin": "<2.0 || >=3.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Vrisini\\ViRegistrationBundle\\": "src/"
+        }
+    },
+    "extra": {
+        "contao-manager-plugin": "Vrisini\\ViRegistrationBundle\\ContaoManager\\Plugin"
+    }
 }
