--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"type":"contao-bundle",
 	"homepage":"https://www.vrisini.de",
 	"license":"MIT",
-	"version":1.0.1,
+	"version":"1.0.1",
 	"authors":[
 		{
 			"name": "Anupam Chatterjee",
