--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "symfony/http-foundation": "^3.3 || ^4.0",
         "symfony/http-kernel": "^3.3 || ^4.0",
         "symfony/security-core": "^3.3 || ^4.0",
-        "symfony/security-http": "^3.3 || ^4.0"
+        "symfony/security-http": "^3.3 || ^4.0",
+        "composer/package-versions-deprecated": ">=1.0"
     },
     "require-dev": {
         "contao/manager-plugin": "~2.0",
