--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
 	"type":"contao-bundle",
 	"homepage":"https://www.vrisini.de",
 	"license":"MIT",
+	"version":"1.0.2",
 	"authors":[
 		{
 			"name": "Anupam Chatterjee",
