Adding initial files to module

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name":"vrisiniinfotech/vi-registration",
+	"name":"vrisini/vi-registration",
 	"description":"Erweitern Sie die Contao-Registrierung um erweiterte Funktionen wie die codebasierte E-Mail-Validierung, etc.",
 	"keywords":["contao","registrierung","E-Mail-Validierung","form","codebasierte","vrisini"],
 	"type":"contao-bundle",
@@ -48,5 +48,7 @@
     },
     "extra": {
         "contao-manager-plugin": "Vrisini\\ViRegistrationBundle\\ContaoManager\\Plugin"
-    }
+    },
+    "minimum-stability":"dev",
+    "prefer-stable":false
 }
