Adding initial files to module

--- a/composer.json
+++ b/composer.json
@@ -50,5 +50,5 @@
         "contao-manager-plugin": "Vrisini\\ViRegistrationBundle\\ContaoManager\\Plugin"
     },
     "minimum-stability":"dev",
-    "prefer-stable":false
+    "prefer-stable":true
 }
